--- a/BryanA-DevelopmentsApp/Objects/ReportLayouts/ProductionBOMReport.rdl
+++ b/BryanA-DevelopmentsApp/Objects/ReportLayouts/ProductionBOMReport.rdl
@@ -46,13 +46,13 @@
                   <Width>0.7in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1in</Width>
+                  <Width>1.3125in</Width>
                 </TablixColumn>
                 <TablixColumn>
                   <Width>0.57292in</Width>
                 </TablixColumn>
                 <TablixColumn>
-                  <Width>1in</Width>
+                  <Width>0.6875in</Width>
                 </TablixColumn>
               </TablixColumns>
               <TablixRows>
@@ -61,7 +61,7 @@
                   <TablixCells>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox1">
+                        <Textbox Name="Textbox55">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -97,7 +97,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox3">
+                        <Textbox Name="Textbox56">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -133,7 +133,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox5">
+                        <Textbox Name="Textbox57">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -169,7 +169,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox7">
+                        <Textbox Name="Textbox58">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -205,7 +205,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox9">
+                        <Textbox Name="Textbox59">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -243,7 +243,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox11">
+                        <Textbox Name="Textbox60">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -279,7 +279,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox13">
+                        <Textbox Name="Textbox61">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -315,7 +315,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox15">
+                        <Textbox Name="Textbox62">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -353,7 +353,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox18">
+                        <Textbox Name="Textbox63">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -389,7 +389,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox20">
+                        <Textbox Name="Textbox64">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -425,7 +425,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox22">
+                        <Textbox Name="Textbox65">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -461,7 +461,7 @@
                     </TablixCell>
                     <TablixCell>
                       <CellContents>
-                        <Textbox Name="Textbox24">
+                        <Textbox Name="Textbox66">
                           <CanGrow>true</CanGrow>
                           <KeepTogether>true</KeepTogether>
                           <Paragraphs>
@@ -1321,18 +1321,35 @@
             <TablixRowHierarchy>
               <TablixMembers>
                 <TablixMember>
-                  <KeepWithGroup>After</KeepWithGroup>
-                </TablixMember>
-                <TablixMember>
-                  <Group Name="Details">
+                  <Group Name="No">
                     <GroupExpressions>
-                      <GroupExpression>=Fields!Line_ProdBOMNo.Value</GroupExpression>
-                      <GroupExpression>=Fields!Line_LineNo.Value</GroupExpression>
+                      <GroupExpression>=Fields!No.Value</GroupExpression>
                     </GroupExpressions>
+                    <PageBreak>
+                      <BreakLocation>Between</BreakLocation>
+                    </PageBreak>
                   </Group>
+                  <SortExpressions>
+                    <SortExpression>
+                      <Value>=Fields!No.Value</Value>
+                    </SortExpression>
+                  </SortExpressions>
                   <TablixMembers>
-                    <TablixMember />
-                    <TablixMember />
+                    <TablixMember>
+                      <KeepWithGroup>After</KeepWithGroup>
+                    </TablixMember>
+                    <TablixMember>
+                      <Group Name="Details">
+                        <GroupExpressions>
+                          <GroupExpression>=Fields!Line_ProdBOMNo.Value</GroupExpression>
+                          <GroupExpression>=Fields!Line_LineNo.Value</GroupExpression>
+                        </GroupExpressions>
+                      </Group>
+                      <TablixMembers>
+                        <TablixMember />
+                        <TablixMember />
+                      </TablixMembers>
+                    </TablixMember>
                   </TablixMembers>
                 </TablixMember>
               </TablixMembers>
@@ -1350,7 +1367,7 @@
         <Height>0.68125in</Height>
         <Style />
       </Body>
-      <Width>10.40418in</Width>
+      <Width>10.40417in</Width>
       <Page>
         <PageHeader>
           <Height>1.60268in</Height>
@@ -1376,7 +1393,6 @@
                 </Paragraph>
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
-              <Left>0in</Left>
               <Height>0.25in</Height>
               <Width>1.79167in</Width>
               <Style>
@@ -1410,7 +1426,7 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>1.24181in</Top>
-              <Left>2.48958in</Left>
+              <Left>3.38958in</Left>
               <Height>0.2in</Height>
               <Width>1.35417in</Width>
               <ZIndex>1</ZIndex>
@@ -1479,7 +1495,7 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>0.62792in</Top>
-              <Left>2.48958in</Left>
+              <Left>3.38958in</Left>
               <Height>0.2in</Height>
               <Width>1.35417in</Width>
               <ZIndex>3</ZIndex>
@@ -1514,7 +1530,7 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>0.84181in</Top>
-              <Left>2.48959in</Left>
+              <Left>3.38959in</Left>
               <Height>0.2in</Height>
               <Width>1.35417in</Width>
               <ZIndex>4</ZIndex>
@@ -1617,7 +1633,7 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>1.04181in</Top>
-              <Left>2.48958in</Left>
+              <Left>3.38958in</Left>
               <Height>0.2in</Height>
               <Width>1.35417in</Width>
               <ZIndex>7</ZIndex>
@@ -1686,7 +1702,7 @@
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Left>1.75001in</Left>
               <Height>0.25in</Height>
-              <Width>0.81875in</Width>
+              <Width>2.99375in</Width>
               <ZIndex>9</ZIndex>
               <Style>
                 <Border>
@@ -1719,7 +1735,7 @@
               <Top>0.62792in</Top>
               <Left>1.14931in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>2.08334in</Width>
               <ZIndex>10</ZIndex>
               <Style>
                 <Border>
@@ -1752,7 +1768,7 @@
               <Top>0.84181in</Top>
               <Left>1.14931in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>2.08334in</Width>
               <ZIndex>11</ZIndex>
               <Style>
                 <Border>
@@ -1785,7 +1801,7 @@
               <Top>1.04181in</Top>
               <Left>1.14931in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>2.08334in</Width>
               <ZIndex>12</ZIndex>
               <Style>
                 <Border>
@@ -1818,7 +1834,7 @@
               <Top>1.24181in</Top>
               <Left>1.14931in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>2.08334in</Width>
               <ZIndex>13</ZIndex>
               <Style>
                 <Border>
@@ -1849,9 +1865,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>0.62792in</Top>
-              <Left>3.84376in</Left>
+              <Left>4.74376in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>3.98749in</Width>
               <ZIndex>14</ZIndex>
               <Style>
                 <Border>
@@ -1882,9 +1898,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>0.84181in</Top>
-              <Left>3.84376in</Left>
+              <Left>4.74376in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>3.98749in</Width>
               <ZIndex>15</ZIndex>
               <Style>
                 <Border>
@@ -1915,9 +1931,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>1.04181in</Top>
-              <Left>3.84376in</Left>
+              <Left>4.74376in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>3.98749in</Width>
               <ZIndex>16</ZIndex>
               <Style>
                 <Border>
@@ -1948,9 +1964,9 @@
               </Paragraphs>
               <rd:DefaultName>Textbox14</rd:DefaultName>
               <Top>1.24181in</Top>
-              <Left>3.84376in</Left>
+              <Left>4.74376in</Left>
               <Height>0.2in</Height>
-              <Width>1.13542in</Width>
+              <Width>3.98749in</Width>
               <ZIndex>17</ZIndex>
               <Style>
                 <Border>
